--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
     "@vitejs/plugin-react": "^3.1.0",
-    "typescript": "^4.9.3",
+    "react-scripts": "^5.0.1",
+    "typescript": "^4.9.5",
     "vite": "^4.1.0"
   }
 }
