--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.14.12",
     "@mui/x-data-grid": "^6.16.1",
+    "@mui/x-date-pickers": "^6.16.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
